----------------------------------------------------------------
-- wren ng thornton <wren@community.haskell.org>    ~ 2011.02.27
----------------------------------------------------------------

Name:           bytestring-unix
Version:        0.1.0
-- Source-Repository requires version 1.6
Cabal-Version:  >= 1.6
Build-Type:     Simple
Stability:      provisional
Copyright:      Copyright (c) 2010--2011 wren ng thornton
License:        BSD3
License-File:   LICENSE
Author:         wren ng thornton
Maintainer:     wren@community.haskell.org
Homepage:       http://code.haskell.org/~wren/
Category:       Data
Synopsis:       Unix/Posix-specific functions for ByteStrings.
Description:    Unix/Posix-specific functions for ByteStrings.
                .
                Provides ByteString versions of the System.Posix.IO 
                file-descriptor based I/O API.

Source-Repository head
    Type:     darcs
    Location: http://community.haskell.org/~wren/bytestring-unix

----------------------------------------------------------------
Library
    Hs-Source-Dirs:  src
    Exposed-Modules: System.Posix.IO.ByteString
                   , System.Posix.IO.ByteString.Lazy

    -- unix-2.4.0.0 (which introduced the fdReadBuf/fdWriteBuf
    -- functions) requires base>=4.1 so we might as well just require
    -- base-4 too instead of having all those flags for different
    -- versions of base.
    --
    -- Not sure what the real minbound is on bytestring...
    Build-Depends: base       >= 4 && < 5
                 , bytestring >= 0.9.1.5
                 , unix       >= 2.4.0.0

----------------------------------------------------------------
----------------------------------------------------------- fin.
